Modified the file repo to include file type and managed to get the file controller to upload and download file(s).

--- a/Views/File/Upload.cshtml
+++ b/Views/File/Upload.cshtml
@@ -4,7 +4,13 @@
 }
 
 <form asp-controller="File" asp-action="Upload" enctype="multipart/form-data">
+    
     <h1>Upload File</h1>
-    <input asp-for="MyFiles" type="file" />
+        
+    <input type="file"
+        asp-for="MyFiles"
+        accept="application/pdf, image/jpeg"
+        multiple />
+    
     <button type="submit">Upload</button>
 </form>
